--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 body{
     background-color: #f1efef;
 }
-#top,#box,#foot{
+#top,#nav_2,#nav_1,#box,#foot{
     width: 100%;
     min-width: 990px;
 }
@@ -11,6 +11,7 @@ body{
     width: 100%;
     height: 90px;
     min-width: 990px;
+    margin-bottom: 20px;
 }
 .head{
     width: 990px;
@@ -36,8 +37,102 @@ body{
     color: rgb(0, 0, 0);
 }
 
+.hiden{
+    display: none;
+}
 
 
+
+
+.nav{
+    width: 200px;
+    height: 400px;
+    left: 15%;
+    position: absolute;
+    top: 164px;
+    z-index: 5;
+
+}
+.nav>ul{
+    position: relative;
+}
+.nav>ul>li{
+  width: 200px;
+  height: 50px;
+  margin-bottom: 1px;
+  background-color: rgb(199, 199, 199);
+}
+.nav>ul>li:nth-child(1){
+    width: 200px;
+    height: 40px;
+    text-align: center;
+}
+
+.nav_li>div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav_li>div>h3{
+    font-size: 16px;
+    line-height: 40px;
+    padding-left: 5px;
+}
+.nav_li>div>p{
+    line-height: 40px;
+    font-size: 12px;
+    padding-right: 5px;
+
+}
+.nav_right{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.nav_img{
+    width: 900px;
+    height: 400px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: none;
+}
+.nav_img>img{
+    width: 100%;
+    height: 100%;
+}
+
+
+.nav_1{
+    width: 1100px;
+    height: 48px;
+    margin:0 auto
+}
+.nav_1>ul>li{
+    float: left;
+    height: 48px;
+    line-height: 48px;
+    margin-right: 50px;
+}
+.nav_1>ul>a{
+    float: left;
+    height: 48px;
+    line-height: 48px;
+    margin-right: 50px;
+}
+
+.nav_1>ul>a>li:nth-child(1){
+    height: 48px;
+    line-height: 48px;
+    display: block;
+    padding: 0 16px;
+    font-size: 14px;
+    color: #fff;
+    background-image: linear-gradient(269deg,#b34747 1%,#cc5252 98%);
+    background-color: #b32424;
+    padding:0 72px;
+    margin-left: 2px;
+}
 
 
 
