--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ body{
     height: 400px;
     left: 15%;
     position: absolute;
-    top: 160px;
+    top: 111px;
     z-index: 5;
 
 }
@@ -106,7 +106,9 @@ body{
 .nav_1{
     width: 1100px;
     height: 48px;
-    margin:0 auto
+    position: absolute;
+    left: 14%;
+    top: 70px;
 }
 .nav_1>ul>li{
     float: left;
